test/integration/eu-west-1/k8s-qa/services/ingress-native-druid-test copy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: druid-router
  namespace: druid-operator-system
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`internal.qa.qa.dfds.cloud`) && (PathPrefix(`/apache-druid`) || PathPrefix(`/status`) || PathPrefix(`/druid`) || PathPrefix(`/proxy`) || PathPrefix(`/assets`))
    middlewares:
    - name: druid-router-stripprefix
      namespace: druid-operator-system
    services:
    - kind: Service
      name: druid-tiny-cluster-routers
      namespace: druid-operator-system
      port: 8088
